"adyen.submitButton" = "Pay";
"adyen.submitButton.formatted" = "Pay %@";
"adyen.cancelButton" = "Cancel";
"adyen.dismissButton" = "OK";
"adyen.error.title" = "Error";
"adyen.error.unknown" = "An unknown error occurred";
"adyen.validationAlert.title" = "Invalid Input";
"adyen.paymentMethods.otherMethods" = "Select other method";
"adyen.paymentMethods.title" = "Payment Methods";
"adyen.sepa.ibanItem.title" = "Account Number (IBAN)";
"adyen.sepa.ibanItem.invalid" = "Invalid account number";
"adyen.sepa.nameItem.title" = "Holder Name";
"adyen.sepa.nameItem.placeholder" = "J. Smith";
"adyen.sepa.consentLabel" = "By pressing the button above, you agree that the specified amount will be debited from your bank account.";
"adyen.sepa.nameItem.invalid" = "Holder name invalid";
"adyen.card.storeDetailsButton" = "Remember for next time";
"adyen.card.nameItem.title" = "Name on card";
"adyen.card.nameItem.placeholder" = "J. Smith";
"adyen.card.nameItem.invalid" = "Invalid cardholder name";
"adyen.card.numberItem.title" = "Card number";
"adyen.card.numberItem.placeholder" = "1234 5678 9012 3456";
"adyen.card.numberItem.invalid" = "Invalid card number";
"adyen.card.expiryItem.title" = "Expiry date";
"adyen.card.expiryItem.title.optional" = "Expiry date (optional)";
"adyen.card.expiryItem.placeholder" = "MM/YY";
"adyen.card.expiryItem.invalid" = "Invalid expiry date";
"adyen.card.cvcItem.invalid" = "Invalid CVC / CVV format";
"adyen.card.cvcItem.title" = "CVC / CVV";
"adyen.card.cvcItem.placeholder" = "123";
"adyen.card.stored.title" = "Verify your card";
"adyen.card.stored.message" = "Please enter the CVC code for %@";
"adyen.card.stored.expires" = "Expires %@";
"adyen.dropIn.stored.title" = "Confirm %@ payment";
"adyen.dropIn.preselected.openAll.title" = "Change Payment Method";
"adyen.continueTo" = "Continue to %@";
"adyen.phoneNumber.title" = "Telephone number";
"adyen.phoneNumber.invalid" = "Invalid telephone number";
"adyen.phoneNumber.placeholder" = "123–456–789";
"adyen.card.cvcItem.placeholder.digits" = "%@ digits";
"adyen.emailItem.title" = "Email address";
"adyen.emailItem.placeHolder" = "Email address";
"adyen.emailItem.invalid" = "Invalid email address";
"adyen.moreOptions" = "More options";
"adyen.mbway.confirmPayment" = "Confirm your payment on the MB WAY app";
"adyen.await.waitForConfirmation" = "Waiting for confirmation";
"adyen.blik.confirmPayment" = "Open your banking app to confirm the payment.";
"adyen.blik.invalid" = "Enter 6 numbers";
"adyen.blik.code" = "6-digit code";
"adyen.blik.help" = "Get the code from your banking app.";
"adyen.blik.placeholder" = "123–456";
"adyen.preauthorizeWith" = "Preauthorize with %@";
"adyen.confirmPreauthorization" = "Confirm preauthorization";
"adyen.card.cvcItem.title.optional" = "CVC / CVV (optional)";
"adyen.confirmPurchase" = "Confirm purchase";
"adyen.lastName" = "Last name";
"adyen.firstName" = "First name";
"adyen.card.pin.title" = "Pin";
"adyen.missingField" = "Incomplete field";
"adyen.card.applyGiftcard" = "Redeem";
"adyen.voucher.collectionInstitutionNumber" = "Collection Institution Number";
"adyen.voucher.merchantName" = "Merchant";
"adyen.voucher.expirationDate" = "Expiration Date";
"adyen.voucher.paymentReferenceLabel" = "Payment Reference";
"adyen.voucher.shopperName" = "Shopper Name";
"adyen.button.copy" = "Copy";
"adyen.voucher.introduction" = "Thank you for your purchase, please use the following information to complete your payment.";
"adyen.voucher.readInstructions" = "Read instructions";
"adyen.voucher.saveImage" = "Save as image";
"adyen.voucher.finish" = "Finish";
"adyen.card.brazilSSN.placeholder" = "123.123.123-12";
"adyen.amount" = "Amount";
"adyen.pix.instructions" = "Open the app with the PIX registered key, choose Pay with PIX and scan the QR Code or copy and paste the code";
"adyen.pix.expirationLabel" = "You have %@ to pay";
"adyen.pix.copyButton" = "Copy code";
"adyen.pix.instructions.copiedMessage" = "Code copied to clipboard";
"adyen.billingAddressSection.title" = "Billing address";
"adyen.deliveryAddressSection.title" = "Delivery Address";
"adyen.countryField.title" = "Country";
"adyen.addressField.title" = "Address";
"adyen.addressField.placeholder" = "Address";
"adyen.streetField.title" = "Street";
"adyen.streetField.placeholder" = "Street";
"adyen.houseNumberField.title" = "House number";
"adyen.houseNumberField.placeholder" = "House number";
"adyen.cityField.title" = "City";
"adyen.cityField.placeholder" = "City";
"adyen.cityTownField.title" = "City / Town";
"adyen.cityTownField.placeholder" = "City / Town";
"adyen.postalCodeField.title" = "Postal code";
"adyen.postalCodeField.placeholder" = "Postal code";
"adyen.zipCodeField.title" = "Zip code";
"adyen.zipCodeField.placeholder" = "Zip code";
"adyen.stateField.title" = "State";
"adyen.stateField.placeholder" = "State";
"adyen.selectStateField.placeholder" = "Select state";
"adyen.stateOrProvinceField.title" = "State or province";
"adyen.stateOrProvinceField.placeholder" = "State or province";
"adyen.selectStateOrProvinceField.placeholder" = "Select province or territory";
"adyen.provinceOrTerritoryField.title" = "Province or Territory";
"adyen.provinceOrTerritoryField.placeholder" = "Province or Territory";
"adyen.apartmentSuiteField.title" = "Apartment / Suite";
"adyen.apartmentSuiteField.placeholder" = "Apartment / Suite";
"adyen.errorFeedback.emptyField" = "Required field, please fill it in.";
"adyen.errorFeedback.incorrectFormat" = "Input format is not valid.";
"adyen.field.title.optional" = "(optional)";
"adyen.boletobancario.btnLabel" = "Generate Boleto";
"adyen.boleto.sendCopyToEmail" = "Send a copy to my email";
"adyen.boleto.personalDetails" = "Personal details";
"adyen.boleto.socialSecurityNumber" = "CPF/CNPJ";
"adyen.boleto.download.pdf" = "Download PDF";
"adyen.giftcard.currencyError" = "Gift cards are only valid in the currency they were issued in";
"adyen.giftcard.noBalance" = "This gift card has zero balance";
"adyen.partialPayment.remainingBalance" = "Remaining balance will be %@";
"adyen.partialPayment.payRemainingAmount" = "Select payment method for the remaining %@";
"adyen.card.taxNumber.label" = "Cardholder birthdate (YYMMDD) or Corporate registration number (10 digits)";
"adyen.card.taxNumber.placeholder" = "YYMMDD / 0123456789";
"adyen.card.taxNumber.invalid" = "Invalid Cardholder birthdate or Corporate registration number";
"adyen.card.encryptedPassword.label" = "First 2 digits of card password";
"adyen.card.encryptedPassword.placeholder" = "12";
"adyen.card.encryptedPassword.invalid" = "Invalid password";
"adyen.card.taxNumber.label.short" = "Birthdate or Corporate registration number";
"adyen.affirm.deliveryAddressToggle.title" = "Separate delivery address";
"adyen.voucher.shopperReference" = "Shopper Reference";
"adyen.voucher.alternativeReference" = "Alternative Reference";
"adyen.amount" = "amount";
"spin.add_card" = "Add Card";
"spin.payment_authorize" = "I authorize Spin to take payments from the financial institution that issued my card in accordance with the terms of my agreement with Spin Terms.";
"spin.spin_terms" = "Spin Terms";
